<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MySQLTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_add_comment">AddComment</string>
    <string name="title_activity_add_books">AddBooks</string>
    <string name="title_activity_read_comments">ReadComments</string>
    <string name="welcome">Welcome!</string>
    <string name="addcom">Add Comment</string>

    <!-- string ids for registration.xml -->
    <string name="username_textview">Username:</string>
    <string name="password_textview">Password:</string>
    <string name="submit">Submit</string>

    <!-- string ids for home.xml -->
    <string name="post_comment">Post Comment</string>
    <string name="read_comments_title">Recent Comments</string>
    <string name="passwords_not_same">Passwords don\'t match</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="addbook">Add Book</string>
    <string name="mybooks">My Books</string>
    <string name="inbox">Inbox</string>
    <string name="searchbooks">Search Books</string>
    <string name="title_activity_add_book">AddBook</string>
    <string name="title_activity_my_books">MyBooks</string>
    <string name="title_activity_search_books">SearchBooks</string>
    <string name="title">Title</string>
    <string name="ok">OK</string>
    <string name="author">Author</string>
    <string name="isbn">ISBN</string>
    <string name="search">Search Books</string>
    <string name="enterbook">Enter Book Title</string>
    <string name="title_activity_search_book_results">SearchBookResults</string>
    <string name="getsearchres">Books Found</string>
    <string name="title_activity_see_book">SeeBook</string>
    <string name="contact">Contact Owner</string>
    <string name="title_activity_send_message">SendMessage</string>
    <string name="entermessage">Enter Your Message</string>
    <string name="send">Send</string>
    <string name="entertitle">Enter Message Title</string>
    <string name="from">From</string>
    <string name="isbn1">"ISBN: "</string>
    <string name="title_activity_edit_book">EditBook</string>
    <string name="delete">Delete Book</string>
    <string name="title_activity_see_comment">SeeComment</string>
    <string name="message">Message</string>
    <string name="reply">Reply</string>
    <string name="deletemes">Delete Message</string>

</resources>
